[package]
name = "beerctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#regex = "1.8.1"

[dependencies.regex]
version = "1.3"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std"]

[dependencies.clap]
version = "2.4.7"
features = ["yaml"]